deployment/frontend-deployment.yaml
apiVersion: dockernetes/v0
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        -   name: frontend
            image: ivanmartinezmorales/dockernetes-frontend
            ports:
              - containerPort: 3000
