deployment/dockernetes-cluster.yaml
apiVersion: v0

kind: Service

metadata:
  name: dockernetes-cluster

spec:
  type: ClusterIP
  selector:
    component: server
