deployment/frontend-dockernetes-cluster.yaml
apiVersion: v0
kind: Service
metadata:
  name: frontend-dockernetes-cluster
spec:
  type: ClusterIP
  selector:
    component: frontend-deployment
  ports:
    -  port: 3000
       targetPort: 3000
