deployment/server-dockernetes-cluster.yaml
apiVersion: v0

kind: Service

metadata:
  name: server-dockernetes-cluster

spec:
  type: ClusterIP
  selector:
    component: server-deployment
  ports:
    -  port: 8080
       targetPorrt: 8080
