deployment/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: $1
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: server-kubernetes-cluster
              servicePort: 8080
          - path: /?(.*)
            backend:
              serviceName: frontend-kubernetes-cluster
              servicePort: 3000
